--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+	<h1 class= "title">Buscador de series</h1>
+	<input class="input" type="text" name="" value="">
+	<button class="boton" type="button" name="button">Search</button>
+	<ul class= "lista">
+
+	</ul>
 
 
 
