--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	<h1 class= "title">Buscador de series</h1>
-	<input class="input" type="text" name="" value="">
-	<button class="boton" type="button" name="button">Search</button>
-	<ul class= "lista">
+	<header>
+		<h1 class= "title">Buscador de series</h1>
+	</header>
+	<main>
+		<input class="input" type="text" name="" value="">
+		<button class="boton" type="button" name="button">Search</button>
+		<ul class= "lista"></ul>
 
-	</ul>
-
-
+	</main>
 
 	<script type="text/javascript" src="js/main.js"> </script>
 </body>
