--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<title>Adalab Web Starter Kit</title>
+	<title>Buscador series Adalab sprint 2 </title>
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -10,8 +10,10 @@
 		<h1 class= "title">Buscador de series</h1>
 	</header>
 	<main>
+		<div class="container-boton">
 		<input class="input" type="text" name="" value="">
 		<button class="boton" type="button" name="button">Search</button>
+		</div>
 		<ul class= "lista"></ul>
 
 	</main>
