--- a/index.html
+++ b/index.html
@@ -10,11 +10,17 @@
 		<h1 class= "title">Buscador de series</h1>
 	</header>
 	<main>
+		<p class="parrafo"></p>
+		<input class="input2" type="text" name="" value="">
+		<button class="boton2" type="button" name="button">Search</button>
+
 		<div class="container-boton">
 		<input class="input" type="text" name="" value="">
 		<button class="boton" type="button" name="button">Search</button>
 		</div>
 		<ul class= "lista"></ul>
+
+
 
 	</main>
 
